# demo_mcp

./: .gitignore  README.md  catalog.py  claude_config.py  demo_docs.json  pyproject.toml  server.py
chatgpt_demo_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_catalog.py  test_claude_config.py
