[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-demo-mcp-server"
version = "0.1.0"
description = "Demo MCP server with search and fetch tools for testing with ChatGPT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]",
]

[project.scripts]
demo-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["catalog", "server"]
